--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,11 @@
     </div>
 
     <h2 class="center">Messages</h2>
-    <div class="messages" id="message-container"></div>
+    <div class="messages" id="message-container">
+        <ul id="message-list">
+           
+        </ul>
+    </div>
 
 </body>
 
