--- a/client/index.html
+++ b/client/index.html
@@ -16,17 +16,19 @@
     <!--linking code from main js-->
     <script src="js/main.js"></script>
     <div class="center">
-        <form class="fill" id="messageForm" method="post" action="/">
+
+        <form class="fill" id="messageForm">
             <textarea rows="4" cols="100" name="messageContent" id="messageBody" placeholder="Message...">
             </textarea>
-            <input class="input-button" type="submit" value="Send Message" />
+            <input id="buttonMessage" class="input-button" type="submit" value="Send Message" />
         </form>
+
     </div>
 
     <h2 class="center">Messages</h2>
     <div class="messages" id="message-container">
         <ul id="message-list">
-           
+
         </ul>
     </div>
 
