--- a/client/index.html
+++ b/client/index.html
@@ -18,8 +18,7 @@
     <div class="center">
 
         <form class="fill" id="messageForm">
-            <textarea rows="4" cols="100" name="messageContent" id="messageBody" placeholder="Message...">
-            </textarea>
+            <textarea rows="4" cols="100" name="messageContent" id="messageBody" placeholder="Message..."></textarea>
             <input id="buttonMessage" class="input-button" type="submit" value="Send Message" />
         </form>
 
